# psamvault-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  NEMOCLAW_COMPAT.md  PLAYWRIGHT_INTEGRATION.md  README.md  SKILL.md  TODOS.md  pyproject.toml  requirements.txt
docs/troubleshooting/: MCP-INSTALL-AND-CONNECT.md  PYTHONPATH-CONFLICT.md  README.md
mcp_server/: __init__.py  agent_guide.py  api_client.py  browser_login_flow.py  cmd_runner.py  consent.py  crypto.py  env_scanner.py  log.py  main.py  session.py  stripe_capture.py  tools.py  version_check.py
mcp_server/prompts/: general-rules.md  how-to-discover-creds.md  how-to-get-username.md  how-to-login.md
nemoclaw-presets/: psamvault.yaml
tests/: conftest.py  live_test_run_with_credential.py  test_api_client.py  test_consent.py  test_crypto.py  test_session.py  test_stripe_capture.py  test_tools.py  test_version_check.py
