[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psamvault-mcp"
version = "0.4.0"
description = "MCP server for psamvault — lets AI agents use stored credentials without seeing them."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

keywords = ["password", "vault", "mcp", "ai", "agents", "security", "credentials"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "keyring>=25.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
# Registers  psamvault-mcp  as a terminal command after pip/pipx install
psamvault-mcp = "mcp_server.main:main"

[project.urls]
Homepage = "https://github.com/psam-717/psamvault-mcp"
Repository = "https://github.com/psam-717/psamvault-mcp"
Issues = "https://github.com/psam-717/psamvault-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]